Envio do painel e investidor

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="index">
         <a href="./pages/empresa.html">EMPRESA</a>
-        <a href="">INVESTIDOR</a>
+        <a href="./pages/investidor.html">INVESTIDOR</a>
     </div>
 </body>
 </html>
