--- a/pages/investidor.html
+++ b/pages/investidor.html
@@ -20,7 +20,7 @@
 
     <div id="empresa">
         <div>
-            <label for="cnpj">CNPJ</label>
+            <label for="cnpj">CPF</label>
             <input type="text" name="cnpj" id="cnpj">
         </div>
 
